# portfolio-rader

./: README.md  portfolio_radar_local_mvp.py
portfolio_副本/: PortfolioRadar_Implementation_Plan_v1 (1)_副本.md  PortfolioRadar_PRD_v1_1_副本.docx  README_LOCAL_RUN.md  portfolio_radar_local_mvp.py  travel_agent_showcase.html
portfoliorader/: pyproject.toml
portfoliorader/app/: config.py
portfoliorader/app/datasources/: akshare_source.py  tushare_source.py
portfoliorader/portfolio/: RUN_ORDER.md  __init__.py
portfoliorader/portfolio_radar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
portfoliorader/tests/: test_akshare_source.py  test_tushare_source.py
