[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-radar"
version = "0.1.0"
description = "Event-driven and technical-signal assistant for A-share fund portfolios."
requires-python = ">=3.11"
dependencies = [
    "akshare",
    "tushare",
    "sqlalchemy",
    "alembic",
    "apscheduler",
    "pydantic[dotenv]>=1.10,<2",
    "snownlp",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]
